# secure-rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_secure.py  pyproject.toml
.context/: langchain_doc.md  rag_agent_langchain.md
.github/workflows/: ci.yml
src/: __init__.py  config.py  document_loader.py  embedding_factory.py  embeddings.py  evaluation.py  guardrails.py  llm_factory.py  logger.py  logging_config.py  observability.py  prompt_defense.py  rag_chain.py  retriever.py  secure_rag_chain.py  text_splitter.py  vector_store.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  schemas.py
tests/: conftest.py
tests/integration/: test_api.py  test_rag_pipeline.py
tests/unit/: test_config.py  test_guardrails.py  test_prompt_defense.py  test_text_splitter.py
ui/: app.py
